update Readme, sample code, upgrade version to 0.5.1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">TestFloatingBubble</string>
+    <string name="app_name">Floating-Bubble-View</string>
 </resources>
